fix: css overflow

--- a/src/beutelnet/bagsearch/static/bagsearch/style.css
+++ b/src/beutelnet/bagsearch/static/bagsearch/style.css
@@ -33,7 +33,7 @@ a[name="footer"]{
   padding: 10px;
   text-align:center;
 
-  -webkit-appearance: none; /* for Safari */
+  -webkit-appearance: none;
   color: var(--dark-gray);
   font-family: 'Noto Sans', Verdana, sans-serif;
   font-size: 1rem;
@@ -57,8 +57,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 100vh;
+  box-sizing: border-box;
+  min-height: 100vh;
+  padding-top: 100px;
 }
 
 h1 {
@@ -68,12 +69,9 @@ h1 {
 }
 
 footer {
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    font-weight: 200;
-    color: #b084f5;
+  left: 0;
+  width: 100%;
+  text-align: center;
 }
 
 .not-visible {
@@ -83,23 +81,22 @@ footer {
 .table {
 	border-collapse: collapse;
 	margin: 25px 0;
+	width: 100%;
 	font-size: 18px;
 	max-width: 561px;
-	min-width: 400px;
-}
-
-.table thead tr {
-    font-weight: 600; /* bolder than regular rows */
-	text-align: center;
-	background-color: #7c5ac4; /* darker purple than row tint */
-	color: #ffffff;             /* ensures white text pops */
-	font-weight: bold;
-	border-bottom: 2px solid var(--color-purple);
+	table-layout: fixed;
 }
 
 .table th,
 .table td {
-	padding:12px 15px;
+	padding: 12px 15px;
+}
+
+.table thead tr {
+	text-align: center;
+	background-color: #6b48a866;
+	color: #ffffff;           
+	border-bottom: 2px solid var(--color-purple);
 }
 
 .table tbody tr {
@@ -113,5 +110,3 @@ footer {
 .table tbody tr:last-of-type {
 	border-bottom: 1px solid var(--color-purple);
 }
-
-
